--- a/.github/workflows/ci-dev.yml
+++ b/.github/workflows/ci-dev.yml
@@ -1,14 +1,16 @@
-name: DEV - CI
+name: 👩‍💻 DEV - CI
 
 on:
   workflow_dispatch:
-    
+
+env:
+  ENV: dev
 
 jobs:
   unit-tests:
-    name: Run Unit Tests
+    name: 🧪 Unit Tests
     runs-on: ubuntu-latest
-    environment: dev
+    environment: ${{ variables.ENV }}
     steps:
       - uses: actions/checkout@v3
       - name: Run Tests
@@ -17,37 +19,37 @@ jobs:
           workingDirectory: api
   
   terraform-plan:
-    name: Run Terraform Plan
+    name: 📐 Terraform Plan
     runs-on: ubuntu-latest
-    environment: dev
+    environment: ${{ variables.ENV }}
     env:
       ARM_CLIENT_ID: ${{secrets.AZURE_CLIENT_ID}}
       ARM_CLIENT_SECRET: ${{secrets.AZURE_CLIENT_SECRET}}
       ARM_SUBSCRIPTION_ID: ${{secrets.AZURE_SUBSCRIPTION_ID}}
       ARM_TENANT_ID: ${{secrets.AZURE_TENANT_ID}}
       # TF_LOG: "TRACE"
-      TF_VAR_env: dev
+      TF_VAR_env: ${{ variables.ENV }}
       TF_VAR_riot_api_key: ${{secrets.RIOT_API_KEY}}
     steps:
       - uses: actions/checkout@v3
       - name: Run Tests
         uses: ./.github/actions/terraform-plan
         with:
-          workingDirectory: infrastructure/environments/dev
+          workingDirectory: infrastructure/environments/${{ variables.ENV }}
 
 
   terraform-apply:
-    name: Deploy Infrastructure
+    name: 🏗️ Deploy Infrastructure
     runs-on: ubuntu-latest
     needs: [unit-tests, terraform-plan]
-    environment: dev
+    environment: ${{ variables.ENV }}
     env:
       ARM_CLIENT_ID: ${{secrets.AZURE_CLIENT_ID}}
       ARM_CLIENT_SECRET: ${{secrets.AZURE_CLIENT_SECRET}}
       ARM_SUBSCRIPTION_ID: ${{secrets.AZURE_SUBSCRIPTION_ID}}
       ARM_TENANT_ID: ${{secrets.AZURE_TENANT_ID}}
       # TF_LOG: "TRACE"
-      TF_VAR_env: dev
+      TF_VAR_env: ${{ variables.ENV }}
       TF_VAR_riot_api_key: ${{secrets.RIOT_API_KEY}}
 
     steps:
@@ -56,13 +58,13 @@ jobs:
       - name: Run Terraform
         uses: ./.github/actions/terraform-apply
         with:
-          workingDirectory: infrastructure/environments/dev
+          workingDirectory: infrastructure/environments/${{ variables.ENV }}
 
   deploy-api:
-    name: Deploy API
+    name: 🚀 Deploy API
     runs-on: ubuntu-latest
     needs: terraform-apply
-    environment: dev
+    environment: ${{ variables.ENV }}
     steps:
       - uses: actions/checkout@v3
       - uses: ./.github/actions/deploy
@@ -75,14 +77,14 @@ jobs:
           loginServer: ${{secrets.REGISTRY_LOGIN_SERVER}}
           commitHash: ${{ github.sha }}
           publishProfile: ${{ secrets.AZURE_PUBLISH_PROFILE }}
-          appName: devlolscoutwa01
+          appName: ${{ variables.ENV }}lolscoutwa01
           imageName: lol-scout-api
 
   deploy-web:
-    name: Deploy Web
+    name: 🚀 Deploy Web
     runs-on: ubuntu-latest
     needs: terraform-apply
-    environment: dev
+    environment: ${{ variables.ENV }}
     steps:
       - uses: actions/checkout@v3
       - uses: ./.github/actions/deploy
@@ -95,7 +97,7 @@ jobs:
           loginServer: ${{secrets.REGISTRY_LOGIN_SERVER}}
           commitHash: ${{ github.sha }}
           publishProfile: ${{ secrets.WEB_AZURE_PUBLISH_PROFILE }}
-          appName: devlolscoutwa02
+          appName: ${{ variables.ENV }}lolscoutwa02
           imageName: lol-scout-web
 
 
