--- a/.github/workflows/ci-test.yml
+++ b/.github/workflows/ci-test.yml
@@ -1,18 +1,21 @@
-name: TEST - CI
+name: 🧪 TEST - CI
 
 on:
-  pull_request: 
-    branches: 
+  pull_request:
+    branches:
       - main
-  push: 
+  push:
     branches:
       - main
 
+env:
+  ENV: test
+
 jobs:
   unit-tests:
-    name: Run Unit Tests
+    name: 🧪 Run Unit Tests
     runs-on: ubuntu-latest
-    environment: test
+    environment: ${{ variables.ENV }}
     steps:
       - uses: actions/checkout@v3
       - name: Run Tests
@@ -23,28 +26,28 @@ jobs:
   terraform-plan:
     name: Run Terraform Plan
     runs-on: ubuntu-latest
-    environment: test
+    environment: ${{ variables.ENV }}
     env:
       ARM_CLIENT_ID: ${{secrets.AZURE_CLIENT_ID}}
       ARM_CLIENT_SECRET: ${{secrets.AZURE_CLIENT_SECRET}}
       ARM_SUBSCRIPTION_ID: ${{secrets.AZURE_SUBSCRIPTION_ID}}
       ARM_TENANT_ID: ${{secrets.AZURE_TENANT_ID}}
       # TF_LOG: "TRACE"
-      TF_VAR_env: test
+      TF_VAR_env: ${{ variables.ENV }}
       TF_VAR_riot_api_key: ${{secrets.RIOT_API_KEY}}
     steps:
       - uses: actions/checkout@v3
       - name: Run Tests
         uses: ./.github/actions/terraform-plan
         with:
-          workingDirectory: infrastructure/environments/test
+          workingDirectory: infrastructure/environments/${{ variables.ENV }}
 
 
   terraform-apply:
-    name: Deploy Infrastructure
+    name: 🏗️ Deploy Infrastructure
     runs-on: ubuntu-latest
     needs: [unit-tests, terraform-plan]
-    environment: test
+    environment: ${{ variables.ENV }}
     if: ${{ github.event_name == 'push' }}
     env:
       ARM_CLIENT_ID: ${{secrets.AZURE_CLIENT_ID}}
@@ -52,7 +55,7 @@ jobs:
       ARM_SUBSCRIPTION_ID: ${{secrets.AZURE_SUBSCRIPTION_ID}}
       ARM_TENANT_ID: ${{secrets.AZURE_TENANT_ID}}
       # TF_LOG: "TRACE"
-      TF_VAR_env: test
+      TF_VAR_env: ${{ variables.ENV }}
       TF_VAR_riot_api_key: ${{secrets.RIOT_API_KEY}}
 
     steps:
@@ -61,13 +64,13 @@ jobs:
       - name: Run Terraform
         uses: ./.github/actions/terraform-apply
         with:
-          workingDirectory: infrastructure/environments/test
+          workingDirectory: infrastructure/environments/${{ variables.ENV }}
 
   deploy-api:
-    name: Deploy API
+    name: 🚀 Deploy API
     runs-on: ubuntu-latest
     needs: terraform-apply
-    environment: test
+    environment: ${{ variables.ENV }}
     if: ${{ github.event_name == 'push' }}
     steps:
       - uses: actions/checkout@v3
@@ -81,5 +84,25 @@ jobs:
           loginServer: ${{secrets.REGISTRY_LOGIN_SERVER}}
           commitHash: ${{ github.sha }}
           publishProfile: ${{ secrets.AZURE_PUBLISH_PROFILE }}
-          appName: testlolscoutwa01
+          appName: ${{ variables.ENV }}lolscoutwa01
           imageName: lol-scout-api
+
+  deploy-web:
+    name: 🚀 Deploy Web
+    runs-on: ubuntu-latest
+    needs: terraform-apply
+    environment: ${{ variables.ENV }}
+    steps:
+      - uses: actions/checkout@v3
+      - uses: ./.github/actions/deploy
+        with:
+          workingDirectory: web
+          clientId: ${{secrets.AZURE_CLIENT_ID}}
+          clientSecret: ${{secrets.AZURE_CLIENT_SECRET}}
+          subscriptionId: ${{secrets.AZURE_SUBSCRIPTION_ID}}
+          tenantId: ${{secrets.AZURE_TENANT_ID}}
+          loginServer: ${{secrets.REGISTRY_LOGIN_SERVER}}
+          commitHash: ${{ github.sha }}
+          publishProfile: ${{ secrets.WEB_AZURE_PUBLISH_PROFILE }}
+          appName: ${{ variables.ENV }}lolscoutwa02
+          imageName: lol-scout-web
